--- a/styles.css
+++ b/styles.css
@@ -46,13 +46,13 @@ header, footer {
   align-items: center;
   justify-content: space-between;
   width: 80vw;
-  margin-top: 18px;
+  margin-top: 3vh;
 }
 
 .headercontent {
   line-height: 1;
-  height: 450px;
-  gap: 32px;
+  height: 74vh;
+  gap: 4vw;
   display: flex;
   justify-content: center;
 }
@@ -61,30 +61,34 @@ header, footer {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  height: 200px;
+  justify-content: space-between;
   flex-basis: auto;
 }
 
+.headercolumns, .placeholder {
+  height: 36vh;
+}
+
 .headerlogo {
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 700;
   color: #f9faf8;
 }
 
 .headerlinks a, .headerdescription {
-  font-size: 18px;
+  font-size: 1.125rem;
   color: #E5E7EB;
 }
 
 .headerlinks a {
   text-decoration: none;
-  margin-left: 18px;
+  margin-left: 1.125rem;
 }
 
 .headerlead {
   line-height: 0.9;
-  margin-bottom: 4px;
-  font-size: 48px;
+  margin: 0.25rem 0;
+  font-size: 3rem;
   font-weight: 900;
   color: #f9faf8;
 }
@@ -102,7 +106,6 @@ header, footer {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 200px;
   background-color: #6D747D;
   color: #E5E7EB;
 }
@@ -110,9 +113,9 @@ header, footer {
 .signup, .signup_two {
   color: #f9faf8;
   background-color: #3882F6;
-  border-radius: 6px;
-  padding: 8px 32px;
-  margin: 8px 0 0 0;
+  border-radius: 0.325rem;
+  padding: 0.5rem 2rem;
+  margin: 0.5rem 0 0 0;
   font-weight: 700;
   border-style: none;
   cursor: pointer;
@@ -148,8 +151,8 @@ main {
 .content_one_title {
   display: flex;
   align-items: center;
-  height: 120px;
-  font-size: 36px;
+  height: 20vh;
+  font-size: 2.25rem;
   font-weight: 900;
   color: #1F2937;
 }
@@ -157,7 +160,7 @@ main {
 .content_one_title_thumbs {
   display: flex;
   justify-content: space-between;
-  padding-bottom: 100px;
+  padding-bottom: 6.25rem;
   gap: 6dvw;
 }
 
@@ -165,9 +168,9 @@ main {
 .content_one_thumb_two,
 .content_one_thumb_three,
 .content_one_thumb_four {
-  width: 150px;
-  height: 150px;
-  border: 4px solid #3882F6;
+  width: 13.75vw;
+  height: 13.75vw;
+  border: 0.25rem solid #3882F6;
   border-radius: 12px;
 }
 
@@ -175,12 +178,12 @@ main {
 .content_one_thumb_two_describe,
 .content_one_thumb_three_describe,
 .content_one_thumb_four_describe {
-  width: 150px;
+  width: 13.75vw;
   text-align: center;
 }
 
 .content_two {
-  height: 400px;
+  height: 65vh;
   background-color: #E5E7EB;
   display: flex;
   justify-content: center;
@@ -190,24 +193,24 @@ main {
 
 .content_two_one {
   line-height: normal;
-  font-size: 36px;
+  font-size: 2.25rem;
   font-style: italic;
   font-weight: 100;
   color: #1F2937;
-  width: 61%;
+  width: 60vw;
 }
 
 .content_two_two {
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 700;
   font-style: normal;
   text-align: right;
-  padding-right: 50px;
-  margin-top: 12px;
+  padding-right: 5vw;
+  margin-top: 2vh;
 }
 
 .content_three {
-  height: 200px;
+  height: 32vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -217,7 +220,7 @@ main {
   width: 80vw;
   background-color: #3882F6;
   padding: 2.5vw 10vw 2.5vw 7.5vw;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -242,14 +245,15 @@ main {
 }
 
 .signup_two {
-  border: 1px solid #E5E7EB;
-  padding: 4px 32px;
+  border: 0.0625rem solid #E5E7EB;
+  padding: 0.25rem 2rem;
   margin: 0;
 }
 
 footer {
-  height: 100px;
+  height: 6.25rem;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   color: #E5E7EB;
